--- a/index.html
+++ b/index.html
@@ -10,7 +10,52 @@
     <script type="module" src="./src/main.js"></script>
 </head>
 
-<body>
+<body class="font-sans">
+    <header class="bg-gradient-primary-secondary text-white p-4 mb-4">
+        <div class="backdrop-container mx-auto p-4 flex justify-between items-center">
+            <div class="title backdrop-wrapper -loaded">
+                <h2 class="w-full m-0 p-0 text-4xl">Welcome.</h2>
+                <h3 class="text-xl font-medium">Millions of movies, TV shows and people to discover. Explore now.</h3>
+            </div>
+            <div>
+                <nav class="space-x-4">
+                    <a href="index.html" class="text-white font-extra-bold hover:text-gray-900">Home</a>
+                    <a href="journal.html" class="text-white font-extra-bold hover:text-gray-900">Journal</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <main class="container mx-auto p-4">
+
+        <div class="title backdrop-wrapper -loaded">
+            <h2 class="w-full m-0 p-0 text-4xl">Movie Journal</h2>
+            <h3 class="text-xl font-medium">Discover and keep track of your cinematic journey with MovieJot, your
+                personalized movie journal. Here,
+                you can favorite
+                your top picks, jot down your thoughts, and explore a curated collection of films. Whether you're a
+                casual viewer or a
+                dedicated cinephile, MovieJot is your space to document, share, and celebrate your love for movies. Join
+                our community
+                and start your movie adventure today!</h3>
+        </div>
+
+        <section class="mb-4">
+            <form id="searchForm" class="flex items-center justify-center">
+                <input type="text" id="searchInput" class="w-[667px] h-[41px] p-2 border border-gray-300 rounded-[25px]"
+                    placeholder="Search for a movie...">
+                <button type="submit" class="p-2 bg-blue-500 text-white rounded-r-md">Search</button>
+            </form>
+        </section>
+
+        <section id="moviesList" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+            <div class="title backdrop-wrapper -loaded">
+                <h2>What's Popular
+                </h2>
+            </div>
+            <!-- Movie cards will be appended here by JavaScript -->
+        </section>
+    </main>
 </body>
 
 </html>
