--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 
 <body class="font-sans">
     <header class="bg-gradient-primary-secondary text-white p-4 mb-4">
+
+        <div class="absolute top-0 left-0 p-2">
+            <img src="./src/images/Logo White.png" alt="Heart Logo" class="h-8">
+        </div>
+
         <div class="backdrop-container mx-auto p-4 flex justify-between items-center">
             <div class="title backdrop-wrapper -loaded">
-                <h2 class="w-full m-0 p-0 text-4xl">Welcome.</h2>
-                <h3 class="text-xl font-medium">Millions of movies, TV shows and people to discover. Explore now.</h3>
+                <h2 class="w-full m-0 py-3 text-4xl">Welcome.</h2>
+                <h3 class="text-xl font-medium">Millions of movies, TV shows and people to discover. Explore now.
+                </h3>
             </div>
             <div>
                 <nav class="space-x-4">
