--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 
 <body class="font-sans">
     <header class="bg-gradient-primary-secondary text-white p-4 mb-4">
-
+        <!-- heart logo: -->
         <div class="absolute top-0 left-0 p-2">
             <img src="./src/images/Logo White.png" alt="Heart Logo" class="h-8">
         </div>
-
+        <!-- Added header text: -->
         <div class="backdrop-container mx-auto p-4 flex justify-between items-center">
             <div class="title backdrop-wrapper -loaded">
                 <h2 class="w-full m-0 py-3 text-4xl">Welcome.</h2>
                 <h3 class="text-xl font-medium">Millions of movies, TV shows and people to discover. Explore now.
                 </h3>
             </div>
+            <!-- Navbar: -->
             <div>
                 <nav class="space-x-4">
                     <a href="index.html" class="text-white font-extra-bold hover:text-gray-900">Home</a>
@@ -45,7 +46,7 @@
                 our community
                 and start your movie adventure today!</h3>
         </div>
-
+        <!--search -->
         <section class="mb-4">
             <form id="searchForm" class="flex items-center justify-center">
                 <input type="text" id="searchInput" class="w-[667px] h-[41px] p-2 border border-gray-300 rounded-[25px]"
@@ -53,7 +54,7 @@
                 <button type="submit" class="p-2 bg-blue-500 text-white rounded-r-md">Search</button>
             </form>
         </section>
-
+        <!-- Movies List -->
         <section id="moviesList" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
             <div class="title backdrop-wrapper -loaded">
                 <h2>What's Popular
