Added footer to the home page

--- a/index.html
+++ b/index.html
@@ -63,6 +63,36 @@
             <!-- Movie cards will be appended here by JavaScript -->
         </section>
     </main>
+
+    <footer class="bg-gradient-to-r" style="
+            background-image: linear-gradient(90deg, #e31059, #f6744b, #e31059);
+            width: 100%;
+          ">
+        <div class="flex justify-center sm:justify-start gap-20 p-8 pb-20 flex-wrap">
+            <figure>
+                <img src="./src/images/Logo White.png" class="h-14" alt="logo" />
+            </figure>
+            <ul class="text-white text-center sm:text-left">
+                <li><a href="#">Search</a></li>
+                <li><a href="#">Back to the Top</a></li>
+                <li><a href="#">Home</a></li>
+            </ul>
+            <div class="flex gap-3">
+                <figure>
+                    <img src="./src/images/Instagran.png" class="h-6" alt="Instagram" />
+                </figure>
+                <figure>
+                    <img src="./src/images/Facebook.png" class="h-6" alt="facebook" />
+                </figure>
+                <figure>
+                    <img src="./src/images/Pinterest.png" class="h-6" alt="pinterest" />
+                </figure>
+            </div>
+        </div>
+        <div class="text-center pb-5 text-sm text-white">
+            <p>@2024 - MovieJournal.com</p>
+        </div>
+    </footer>
 </body>
 
 </html>
