Removed unused codes and commented codes

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <img src="./src/images/Logo White.png" alt="Heart Logo" class="h-8">
         </div>
         <!-- Added header text: -->
-        <div class="backdrop-container mx-auto p-4 flex justify-between items-center">
-            <div class="title backdrop-wrapper -loaded">
+        <div class="mx-auto p-4 flex justify-between items-center">
+            <div>
                 <h2 class="w-full m-0 py-3 text-4xl">Welcome.</h2>
                 <h3 class="text-xl font-medium">Millions of movies, TV shows and people to discover. Explore now.
                 </h3>
@@ -56,9 +56,8 @@
         </section>
         <!-- Movies List -->
         <section id="moviesList" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-            <div class="title backdrop-wrapper -loaded">
-                <h2>What's Popular
-                </h2>
+            <div>
+                <h2>What's Popular</h2>
             </div>
             <!-- Movie cards will be appended here by JavaScript -->
         </section>
