Implemented Movie Diary Project with React Router

--- a/journal.html
+++ b/journal.html
@@ -7,8 +7,8 @@
   <title>Favorite Movies</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./src/styles.css" />
-  <script type="module" src="src/journal.js"></script>
+  <link rel="stylesheet" href="./src/styles/styles.css" />
+  <!-- <script type="module" src="src/components/journal.js"></script> -->
   <script>
     tailwind.config = {
       theme: {
@@ -24,28 +24,7 @@
 </head>
 
 <body class="bg-gray-100 font-inter">
-  <header class="bg-gradient-primary-secondary text-white p-4 mb-4">
-    <!-- eart logo: -->
-    <div class="absolute top-0 left-0 p-2">
-      <img src="./src/images/Logo White.png" alt="Heart Logo" class="h-8" />
-    </div>
-    <!-- Added header text: -->
-    <div class="backdrop-container mx-auto p-4 flex justify-between items-center">
-      <div class="title backdrop-wrapper -loaded">
-        <h2 class="w-full m-0 py-3 text-4xl">Welcome.</h2>
-        <h3 class="text-xl font-medium">
-          Millions of movies, TV shows and people to discover. Explore now.
-        </h3>
-      </div>
-      <!-- Navbar: -->
-      <div>
-        <nav class="space-x-4">
-          <a href="index.html" class="text-white font-extra-bold hover:text-gray-900">Home</a>
-          <a href="journal.html" class="text-white font-extra-bold hover:text-gray-900">Journal</a>
-        </nav>
-      </div>
-    </div>
-  </header>
+
 
   <section class="my-12">
     <div class="flex flex-col sm:flex-row items-center gap-4 sm:ml-10 mb-5">
