--- a/index.html
+++ b/index.html
@@ -6,92 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Diary</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./src/styles.css" />
     <script type="module" src="./src/main.js"></script>
 </head>
 
 <body class="font-sans">
-    <header class="bg-gradient-primary-secondary text-white p-4 mb-4">
-        <!-- heart logo: -->
-        <div class="absolute top-0 left-0 p-2">
-            <img src="./src/images/Logo White.png" alt="Heart Logo" class="h-8">
-        </div>
-        <!-- Added header text: -->
-        <div class="mx-auto p-4 flex justify-between items-center">
-            <div>
-                <h2 class="w-full m-0 py-3 text-4xl">Welcome.</h2>
-                <h3 class="text-xl font-medium">Millions of movies, TV shows and people to discover. Explore now.
-                </h3>
-            </div>
-            <!-- Navbar: -->
-            <div>
-                <nav class="space-x-4">
-                    <a href="index.html" class="text-white font-extra-bold hover:text-gray-900">Home</a>
-                    <a href="journal.html" class="text-white font-extra-bold hover:text-gray-900">Journal</a>
-                </nav>
-            </div>
-        </div>
-    </header>
-
-    <main class="container mx-auto p-4">
-
-        <div class="title backdrop-wrapper -loaded">
-            <h2 class="w-full m-0 p-0 text-4xl">Movie Journal</h2>
-            <h3 class="text-xl font-medium">Discover and keep track of your cinematic journey with MovieJot, your
-                personalized movie journal. Here,
-                you can favorite
-                your top picks, jot down your thoughts, and explore a curated collection of films. Whether you're a
-                casual viewer or a
-                dedicated cinephile, MovieJot is your space to document, share, and celebrate your love for movies. Join
-                our community
-                and start your movie adventure today!</h3>
-        </div>
-        <!--search -->
-        <section class="mb-4">
-            <form id="searchForm" class="flex items-center justify-center">
-                <input type="text" id="searchInput" class="w-[667px] h-[41px] p-2 border border-gray-300 rounded-[25px]"
-                    placeholder="Search for a movie...">
-                <button type="submit" class="p-2 bg-blue-500 text-white rounded-r-md">Search</button>
-            </form>
-        </section>
-        <!-- Movies List -->
-        <section id="moviesList" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-            <div>
-                <h2>What's Popular</h2>
-            </div>
-            <!-- Movie cards will be appended here by JavaScript -->
-        </section>
-    </main>
-
-    <footer class="bg-gradient-to-r" style="
-            background-image: linear-gradient(90deg, #e31059, #f6744b, #e31059);
-            width: 100%;
-          ">
-        <div class="flex justify-center sm:justify-start gap-20 p-8 pb-20 flex-wrap">
-            <figure>
-                <img src="./src/images/Logo White.png" class="h-14" alt="logo" />
-            </figure>
-            <ul class="text-white text-center sm:text-left">
-                <li><a href="#">Search</a></li>
-                <li><a href="#">Back to the Top</a></li>
-                <li><a href="#">Home</a></li>
-            </ul>
-            <div class="flex gap-3">
-                <figure>
-                    <img src="./src/images/Instagran.png" class="h-6" alt="Instagram" />
-                </figure>
-                <figure>
-                    <img src="./src/images/Facebook.png" class="h-6" alt="facebook" />
-                </figure>
-                <figure>
-                    <img src="./src/images/Pinterest.png" class="h-6" alt="pinterest" />
-                </figure>
-            </div>
-        </div>
-        <div class="text-center pb-5 text-sm text-white">
-            <p>@2024 - MovieJournal.com</p>
-        </div>
-    </footer>
+    <div id="root"></div>
 </body>
 
 </html>
